# 4mp

./: README.md  pyproject.toml
scripts/: README.md
scripts/data/: README.md
scripts/dev/: line_projection_experiment.py
scripts/validation/: beam_focus_check.py
src/fourmp/: __init__.py  __main__.py  cli.py
tests/: test_cli.py
